--- a/creSpring/cre/application.properties.tmpl
+++ b/creSpring/cre/application.properties.tmpl
@@ -38,17 +38,19 @@ spring.datasource.url=jdbc:postgresql://{{ $containerNetwork.IP }}:{{ $pgSqlPort
 #      $dbName = '{{ $dbNameS }}';
       {{ if $CurrentContainer.Env.POSTGRES_USER }}
 #      $user = '{{ $CurrentContainer.Env.POSTGRES_USER }}';
+spring.datasource.username={{ $CurrentContainer.Env.POSTGRES_USER }}
       {{ else }}
 #      $user = substr('U:'.md5($dbName),0,24); 
       {{ end }}
       {{ if $CurrentContainer.Env.POSTGRES_PWD }}
 #      $password = '{{ $CurrentContainer.Env.POSTGRES_PWD }}';
+spring.datasource.password={{ $CurrentContainer.Env.POSTGRES_PWD }}
       {{ else }}
 #      $password = substr('PWD:'.md5($user.":".'{{ sha1 $pgsqlServerPWD }}'),0,32); 
       {{ end }}
 
-spring.datasource.username=postgres
-spring.datasource.password=admin
+
+
 
     {{ end }}
    {{ end }}
