--- a/creSpring/cre/application-pgs.properties.tmpl
+++ b/creSpring/cre/application-pgs.properties.tmpl
@@ -35,7 +35,8 @@ spring.datasource.url=jdbc:postgresql://{{ $containerNetwork.IP }}:{{ $pgSqlPort
        {{ $dbUser := $dbNameS }}
 spring.datasource.username={{ $CurrentContainer.Env.POSTGRES_USER }}
       {{ else }}
-       {{ $dbUser := slice (printf "U:.%s" (sha1 $dbNameS)) 0 24 }}
+       {{ $dbUser := (printf "U:.%s" (sha1 $dbNameS)) }}
+#         $dbUser := slice (printf "U:.%s" (sha1 $dbNameS)) 0 24  # slice not working - fnc not defined
 spring.datasource.username={{ $dbUser }}
       {{ end }}
       {{ if $CurrentContainer.Env.POSTGRES_PWD }}
@@ -43,7 +44,8 @@ spring.datasource.password={{ $CurrentContainer.Env.POSTGRES_PWD }}
       {{ else }}
 #      not sure if $dbUser still alive here... - if not second if User is needed
        {{ $dbPassword := (printf "%s:%s" $dbUser (sha1 $pgsqlServerPWD)) }}
-       {{ $dbPassword := slice (printf "PWD:.%s" (sha1 dbPassword)) 0 32 }}
+       {{ $dbPassword := (printf "PWD:.%s" (sha1 dbPassword)) }}
+#         $dbPassword := slice (printf "PWD:.%s" (sha1 dbPassword)) 0 32  # slice not working
 spring.datasource.password={{ $dbPassword }}
       {{ end }}
 
