--- a/creSpring/cre/application-pgs.properties.tmpl
+++ b/creSpring/cre/application-pgs.properties.tmpl
@@ -44,15 +44,15 @@ spring.datasource.password={{ $CurrentContainer.Env.POSTGRES_PWD }}
         {{ if $CurrentContainer.Env.POSTGRES_USER }}
          {{ $dbUser := $CurrentContainer.Env.POSTGRES_USER }}
          {{ $dbPassword := (printf "%s:%s" $dbUser (sha1 $pgsqlServerPWD)) }}
-         {{ $dbPassword := (printf "PWD:.%s" (sha1 dbPassword)) }}
-#           $dbPassword := slice (printf "PWD:.%s" (sha1 dbPassword)) 0 32  # slice not working
+         {{ $dbPassword := (printf "PWD:.%s" (sha1 $dbPassword)) }}
+#           $dbPassword := slice (printf "PWD:.%s" (sha1 $dbPassword)) 0 32  # slice not working
 spring.datasource.password={{ $dbPassword }}
         {{ else }}
          {{ $dbUser := (printf "U:.%s" (sha1 $dbNameS)) }}
 #           $dbUser := slice (printf "U:.%s" (sha1 $dbNameS)) 0 24  # slice not working - fnc not defined
          {{ $dbPassword := (printf "%s:%s" $dbUser (sha1 $pgsqlServerPWD)) }}
-         {{ $dbPassword := (printf "PWD:.%s" (sha1 dbPassword)) }}
-#           $dbPassword := slice (printf "PWD:.%s" (sha1 dbPassword)) 0 32  # slice not working
+         {{ $dbPassword := (printf "PWD:.%s" (sha1 $dbPassword)) }}
+#           $dbPassword := slice (printf "PWD:.%s" (sha1 $dbPassword)) 0 32  # slice not working
 spring.datasource.password={{ $dbPassword }}
         {{ end }}
 
