--- a/creSpring/cre/application-pgs.yml.tmpl
+++ b/creSpring/cre/application-pgs.yml.tmpl
@@ -1,25 +1,36 @@
 # https://docs.spring.io/spring-boot/docs/2.0.x/reference/html/common-application-properties.html
 # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#data-properties
 
-# DB
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-
-# spring.jpa.hibernate.ddl-auto=none
-# spring.jpa.hibernate.show-sql=true
+# DB jpa
+spring
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQL9Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+#   hibernate
+#     ddl-auto: none
+#     show-sql: true
+#     liquibase:
+#       change-log: classpath:db/changelog/changelog.xml
 
 #Liquibase 
 # https://reflectoring.io/database-migration-spring-boot-liquibase/
-spring.liquibase.change-log=classpath:db/changelog/changelog.xml
-spring.liquibase.enabled=true
-#spring.liquibase.defaultSchema=mmm
-#spring.liquibase.liquibaseSchema=mmm
-liquibase.change-log=classpath:db/changelog/changelog.xml
-liquibase.enabled=true
-#spring.jpa.hibernate.liquibase.change-log=classpath:db/changelog/changelog.xml
+spring:
+  liquibase:
+    change-log: classpath:db/changelog/changelog.xml
+    enabled: true
+#   defaultSchema=mmm
+#   liquibaseSchema=mmm
+
+liquibase:
+  change-log: classpath:db/changelog/changelog.xml
+  enabled: true
 
 # add postgres data
+spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
 {{ if $CurrentContainer.Env.POSTGRES_DB }}
  {{ range $pgsqlServerPWD, $containers := groupByMulti $ "Env.POSTGRES_ROOT_PWD" "," }}
   {{ range $index, $container := $containers }}
@@ -29,31 +40,31 @@ liquibase.enabled=true
 #    $host = '{{ $containerNetwork.IP }}';
 # $dbName = '{{ $CurrentContainer.Env.POSTGRES_DB }}';  //todo: handle multiple comma seperated
     {{ range $dbNameS := split $CurrentContainer.Env.POSTGRES_DB "," }} 
-spring.datasource.url=jdbc:postgresql://{{ $containerNetwork.IP }}:{{ $pgSqlPort }}/{{ $dbNameS }}
+    url: jdbc:postgresql://{{ $containerNetwork.IP }}:{{ $pgSqlPort }}/{{ $dbNameS }}
 #      $dbName = '{{ $dbNameS }}';
       {{ if $CurrentContainer.Env.POSTGRES_USER }}
-spring.datasource.username={{ $CurrentContainer.Env.POSTGRES_USER }}
+    username: {{ $CurrentContainer.Env.POSTGRES_USER }}
       {{ else }}
        {{ $dbUser := (printf "U:.%s" (sha1 $dbNameS)) }}
 #         $dbUser := slice (printf "U:.%s" (sha1 $dbNameS)) 0 24  # slice not working - fnc not defined
-spring.datasource.username={{ $dbUser }}
+    username: {{ $dbUser }}
       {{ end }}
       {{ if $CurrentContainer.Env.POSTGRES_PWD }}
-spring.datasource.password={{ $CurrentContainer.Env.POSTGRES_PWD }}
+    password: {{ $CurrentContainer.Env.POSTGRES_PWD }}
       {{ else }}
         {{ if $CurrentContainer.Env.POSTGRES_USER }}
          {{ $dbUser := $CurrentContainer.Env.POSTGRES_USER }}
          {{ $dbPassword := (printf "%s:%s" $dbUser (sha1 $pgsqlServerPWD)) }}
          {{ $dbPassword := (printf "PWD:.%s" (sha1 $dbPassword)) }}
 #           $dbPassword := slice (printf "PWD:.%s" (sha1 $dbPassword)) 0 32  # slice not working
-spring.datasource.password={{ $dbPassword }}
+    password: {{ $dbPassword }}
         {{ else }}
          {{ $dbUser := (printf "U:.%s" (sha1 $dbNameS)) }}
 #           $dbUser := slice (printf "U:.%s" (sha1 $dbNameS)) 0 24  # slice not working - fnc not defined
          {{ $dbPassword := (printf "%s:%s" $dbUser (sha1 $pgsqlServerPWD)) }}
          {{ $dbPassword := (printf "PWD:.%s" (sha1 $dbPassword)) }}
 #           $dbPassword := slice (printf "PWD:.%s" (sha1 $dbPassword)) 0 32  # slice not working
-spring.datasource.password={{ $dbPassword }}
+    password: {{ $dbPassword }}
         {{ end }}
 
       {{ end }}
@@ -64,7 +75,7 @@ spring.datasource.password={{ $dbPassword }}
  {{ end }} 
 {{ end }}
 
-# spring.datasource.initialization-mode=always
-# spring.datasource.initialize=true
-# spring.datasource.schema=classpath:/schema.sql
-# spring.datasource.continue-on-error=true
+#   initialization-mode=always
+#   initialize=true
+#   schema=classpath:/schema.sql
+#   continue-on-error=true
