--- a/creSpring/cre/application-pgs.yml.tmpl
+++ b/creSpring/cre/application-pgs.yml.tmpl
@@ -2,13 +2,13 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#data-properties
 
 # DB jpa
-spring
+spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL9Dialect
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-#   hibernate
+#   hibernate:
 #     ddl-auto: none
 #     show-sql: true
 #     liquibase:
