add rabbitmq to spring

--- a/creSpring/cre/application.yml.tmpl
+++ b/creSpring/cre/application.yml.tmpl
@@ -7,9 +7,11 @@ spring:
   profiles:
     active: 
       - pgs
+      - rabbitmq
       - mail
     include: 
       - pgs
+      - rabbitmq
       - mail
 
 debug: true 
