--- a/creSpring/cre/pom.xml.tmpl
+++ b/creSpring/cre/pom.xml.tmpl
@@ -135,6 +135,58 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+<!-- dependency>
+   <groupId>org.apache.spark</groupId>
+   <artifactId>spark-core_2.11</artifactId>
+   <version>2.4.8</version>
+</dependency -->
+
+                <!-- uima begin -->
+<dependency>
+   <groupId>org.apache.opennlp</groupId>
+   <artifactId>opennlp-tools</artifactId>
+   <version>1.9.3</version>
+</dependency>
+
+<dependency>
+   <groupId>org.apache.opennlp</groupId>
+   <artifactId>opennlp-uima</artifactId>
+   <version>1.9.3</version>
+</dependency>
+
+<dependency>
+   <groupId>org.apache.uima</groupId>
+   <artifactId>uimaj-core</artifactId>
+   <version>3.2.0</version>
+</dependency>
+<dependency>
+   <groupId>org.apache.uima</groupId>
+   <artifactId>uimafit-core</artifactId>
+   <version>3.2.0</version>
+</dependency>
+<dependency>
+   <groupId>org.apache.uima</groupId>
+   <artifactId>uimafit-maven-plugin</artifactId>
+   <version>3.2.0</version>
+</dependency>
+
+		<dependency>
+			<groupId>com.github.heideltime</groupId>
+			<artifactId>heideltime</artifactId>
+			<version>2.2</version>
+		</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.uima/DictionaryAnnotator/2.3.1  -->
+
+
+                <dependency>
+                        <groupId>org.apache.uima</groupId>
+                        <artifactId>uimafit-spring</artifactId>
+                        <version>3.2.0</version>
+                </dependency>
+                <!-- uima end -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
