--- a/creSpring/cre/pom.xml.tmpl
+++ b/creSpring/cre/pom.xml.tmpl
@@ -187,6 +187,18 @@
                 </dependency>
                 <!-- uima end -->
 
+                <!-- spark begin ??? -->
+<!--dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-core_2.10</artifactId>
+    <version>1.6.3.2.6.6.0-309</version>
+</dependency-->
+
+
+
+                <!-- spark end ??? -->
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
