--- a/creSpring/cre/pom.xml.tmpl
+++ b/creSpring/cre/pom.xml.tmpl
@@ -194,7 +194,24 @@
     <version>1.6.3.2.6.6.0-309</version>
 </dependency-->
 
+<dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-mllib_2.12</artifactId>
+    <version>3.1.0</version>
+    <exclusions>
+        <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+    </exclusions>
+</dependency>
 
+<dependency>
+    <groupId>com.johnsnowlabs.nlp</groupId>
+    <artifactId>spark-nlp_2.12</artifactId>
+    <!-- artifactId>spark-nlp-gpu_2.12</artifactId -->
+    <version>3.1.0</version>
+</dependency>
 
                 <!-- spark end ??? -->
 
